--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,8 +5,7 @@ driver:
   name: lxd
 lint: |
   set -e
-  yamllint .
-  ansible-lint -p .
+  ansible-lint --exclude .github --exclude molecule -p
 platforms:
   - name: instance
     source:
