[CI] Add test distros

--- a/.github/workflows/molecule.yaml
+++ b/.github/workflows/molecule.yaml
@@ -17,10 +17,14 @@ jobs:
       run:
         working-directory: bonddim.lxd
     strategy:
+      fail-fast: false
       matrix:
         distro:
+          - ubuntu/20.04
           - ubuntu/18.04
           - ubuntu/16.04
+          - fedora/33
+          - fedora/32
           - centos/8
           - centos/7
 
