--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,10 +2,10 @@
 galaxy_info:
   author: Dmytro Bondar
   license: license (MIT)
+  namespace: bonddim
   role_name: lxd
   description: Install LXD daemon from Snapcraft. Migrate legacy LXD on Ubuntu
   github_branch: main
-
   min_ansible_version: 2.8
 
   platforms:
